--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                     <nav id="desktop-nav" class="d-flex align-items-center">
                         <ul class="d-flex m-0">
                             <li><a class="active" href="/">Басты бет</a></li>
-                            <li><a href="assets/pages/shop.html">Дүкен</a></li>
-                            <li><a href="assets/pages/blog.html">Блог</a></li>
-                            <li><a href="assets/pages/about.html">Біз туралы</a></li>
+                            <li><a href="./assets/pages/shop.html">Дүкен</a></li>
+                            <li><a href="./assets/pages/blog.html">Блог</a></li>
+                            <li><a href="./assets/pages/about.html">Біз туралы</a></li>
                         </ul>
                     </nav>
                     <div class="call-to-action">
