--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <ul class="d-flex m-0">
                             <li><a class="active" href="/">Басты бет</a></li>
                             <li><a href="./assets/pages/shop.html">Дүкен</a></li>
-                            <li><a href="./assets/pages/blog.html">Блог</a></li>
+                            <li><a href="./assets/pages/blog.html">Блогтар</a></li>
                             <li><a href="./assets/pages/about.html">Біз туралы</a></li>
                         </ul>
                     </nav>
