--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
                         </div>
                         <div class="row d-flex d-sm-flex mt-3">
                             <div class="social-icons d-flex">
-                                <a class="me-3" href="#"><div id="facebook"></div></a>
+                                <a class="me-3" href="https://web.whatsapp.com/"><div id="facebook"></div></a>
                                 <a class="me-3" href="https://instagram.com/bekzatofff" target="_blank"><div id="instagram"></div></a>
                                 <a class="me-3" href="#"><div id="linkedin"></div></a>
                                 <a class="me-3" href="#"><div id="youtube"></div></a>
